--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,4 @@ services:
     ports:
       - 80:8080
     volumes:
-      - vol:/usr/src/myapp
-volumes:
-  vol:
-    driver: local
+      - v1:/usr/src/myapp
