--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,4 @@ services:
     ports:
       - 80:8080
     volumes:
-      - v1:/usr/src/myapp
-volumes:
-  v1:
-    driver: local
+      - \\wsl.localhost\docker-desktop-data\data\docker\volumes\v1:/usr/src/myapp
