--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     ports:
       - 80:8080
     volumes:
-      - \\wsl.localhost\docker-desktop-data\data\docker\volumes\v3:/usr/src/myapp
+      - \\linux\docker-desktop-data\data\docker\volumes\v3:/usr/src/myapp
